--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="./assets/img/Logo.png" />
+  <link rel="icon" href="../assets/img/Logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
@@ -38,23 +38,23 @@
   <link href="assets//lib/animate/animate.min.css" rel="stylesheet" />
 
   <!-- Customized Bootstrap Stylesheet -->
-  <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Template Stylesheet -->
-  <link href="./assets/css/style.css" rel="stylesheet" />
+  <link href="../assets/css/style.css" rel="stylesheet" />
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="./assets/lib/wow/wow.min.js"></script>
-  <script src="./assets/lib/wow/wow.js"></script>
-  <script src="./assets/lib/easing/easing.min.js"></script>
-  <script src="./assets/lib/waypoints/waypoints.min.js"></script>
-  <script src="./assets/lib/owlcarousel/owl.carousel.min.js"></script>
- 
+  <script src="../assets/lib/wow/wow.min.js"></script>
+  <script src="../assets/lib/wow/wow.js"></script>
+  <script src="../assets/lib/easing/easing.min.js"></script>
+  <script src="../assets/lib/waypoints/waypoints.min.js"></script>
+  <script src="../assets/lib/owlcarousel/owl.carousel.min.js"></script>
+
   <!-- Template Javascript -->
-  <script src="./assets/js/main.js"></script>
+  <script src="../assets/js/main.js"></script>
 
   <title>AgriMarket - MarketPlace</title>
 </head>
